# Debate-Train-Evolve

./: MANIFEST.in  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  tests.py
.github/workflows/: ci.yml  release.yml
configs/: dte_example_config.yaml
docs/: api_reference.md  architecture.md  configuration.md  evaluation.md  examples.md  getting_started.md  index.md  training_guide.md  troubleshooting.md
dte/: __init__.py  cli.py
dte/core/: __init__.py  config.py  evaluator.py  logger.py  pipeline.py
dte/data/: __init__.py  dataset_manager.py  generator.py  processor.py
dte/debate/: __init__.py  agent.py  manager.py  prompts.py
dte/training/: __init__.py  grpo_trainer.py  reward_model.py
dte/utils/: __init__.py  answer_extraction.py  data_utils.py  helpers.py
examples/: custom_debate.py  evaluation_example.py  full_pipeline.py  multi_gpu_training.py  quick_start.py  reward_functions.py
tests/: __init__.py  conftest.py  test_answer_extraction.py  test_config.py  test_data_integration.py  test_data_utils.py  test_debate_integration.py  test_evaluation_integration.py  test_pipeline_integration.py  test_prompts.py  test_reward_integration.py  test_reward_model.py  test_training_integration.py
