[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dte-framework"
version = "0.1.0"
description = "Debate, Train, Evolve: Self-Evolution of Language Model Reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Gaurav Srivastava", email = "gks@vt.edu"},
    {name = "Zhenyu Bi"},
    {name = "Meng Lu"},
    {name = "Xuan Wang"},
]
keywords = ["nlp", "debate", "grpo", "reasoning", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "peft>=0.7.0",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
]
wandb = ["wandb>=0.16.0"]
gpu = [
    "bitsandbytes>=0.41.0",
    "flash-attn>=2.3.0",
]

[project.scripts]
dte = "dte.cli:cli"

[project.urls]
Homepage = "https://ctrl-gaurav.github.io/debate-train-evolve.github.io/"
Repository = "https://github.com/ctrl-gaurav/Debate-Train-Evolve"
Issues = "https://github.com/ctrl-gaurav/Debate-Train-Evolve/issues"
Paper = "https://aclanthology.org/2025.emnlp-main.1666/"

[tool.setuptools.packages.find]
include = ["dte*"]

[tool.setuptools.package-data]
dte = ["py.typed", "*.yaml", "*.json"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require a GPU (deselect with '-m \"not gpu\"')",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line-too-long  (handled by formatter)
    "F401",   # unused-import  (re-exports in __init__)
]

[tool.ruff.lint.isort]
known-first-party = ["dte"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
